# secureface

./: Cargo.toml  README.md  face_recognition_enhanced.py
deploy/: faceauthd.service  io.secureface.FaceAuth.service  secureface-polkit-agent.desktop
faceauth-polkit-agent/: Cargo.toml
faceauth-polkit-agent/src/: main.rs
faceauth-settings/: Cargo.toml
faceauth-settings/src/: main.rs
faceauth_engine/: __init__.py  __main__.py  config.py  database.py  detector.py  embedder.py  engine.py  liveness.py
faceauthd/: Cargo.toml
faceauthd/src/: main.rs
pam/: Makefile  pam_faceauth.c
