[workspace]
members = [
  "faceauthd",
  "faceauth-polkit-agent",
  "faceauth-settings",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
zvariant = "4"
gtk4 = "0.8"
glib = "0.19"
xdg = "2"
